--- a/src/styles/sass-compiled-css/sass/main.css
+++ b/src/styles/sass-compiled-css/sass/main.css
@@ -524,6 +524,14 @@ textarea {
   position: fixed !important;
 }
 
+.bottom-0 {
+  bottom: 0 !important;
+}
+
+.end-0 {
+  right: 0 !important;
+}
+
 .border-0 {
   border: 0 !important;
 }
@@ -558,6 +566,10 @@ textarea {
 
 .justify-content-start {
   justify-content: flex-start !important;
+}
+
+.justify-content-end {
+  justify-content: flex-end !important;
 }
 
 .justify-content-center {
@@ -614,6 +626,10 @@ textarea {
   margin-top: 1rem !important;
 }
 
+.mt-4 {
+  margin-top: 1.5rem !important;
+}
+
 .mt-5 {
   margin-top: 3rem !important;
 }
@@ -642,6 +658,10 @@ textarea {
   margin-bottom: 0.25rem !important;
 }
 
+.mb-2 {
+  margin-bottom: 0.5rem !important;
+}
+
 .mb-3 {
   margin-bottom: 1rem !important;
 }
@@ -654,12 +674,12 @@ textarea {
   margin-left: 0.25rem !important;
 }
 
-.p-0 {
-  padding: 0 !important;
+.ms-2 {
+  margin-left: 0.5rem !important;
 }
 
-.p-1 {
-  padding: 0.25rem !important;
+.p-0 {
+  padding: 0 !important;
 }
 
 .p-2 {
@@ -704,6 +724,11 @@ textarea {
   padding-bottom: 0 !important;
 }
 
+.py-1 {
+  padding-top: 0.25rem !important;
+  padding-bottom: 0.25rem !important;
+}
+
 .py-2 {
   padding-top: 0.5rem !important;
   padding-bottom: 0.5rem !important;
@@ -714,12 +739,8 @@ textarea {
   padding-bottom: 1.5rem !important;
 }
 
-.pt-1 {
-  padding-top: 0.25rem !important;
-}
-
-.pt-4 {
-  padding-top: 1.5rem !important;
+.pt-5 {
+  padding-top: 3rem !important;
 }
 
 .pb-0 {
@@ -730,20 +751,20 @@ textarea {
   padding-bottom: 0.25rem !important;
 }
 
+.ps-5 {
+  padding-left: 3rem !important;
+}
+
 .gap-1 {
   gap: 0.25rem !important;
 }
 
+.gap-2 {
+  gap: 0.5rem !important;
+}
+
 .gap-3 {
   gap: 1rem !important;
-}
-
-.fs-1 {
-  font-size: calc(1.375rem + 1.5vw) !important;
-}
-
-.fs-2 {
-  font-size: calc(1.325rem + 0.9vw) !important;
 }
 
 .fs-3 {
@@ -778,6 +799,11 @@ textarea {
 .bg-primary {
   --bs-bg-opacity: 1;
   background-color: rgba(var(--bs-primary-rgb), var(--bs-bg-opacity)) !important;
+}
+
+.bg-secondary {
+  --bs-bg-opacity: 1;
+  background-color: rgba(var(--bs-secondary-rgb), var(--bs-bg-opacity)) !important;
 }
 
 .rounded {
@@ -837,12 +863,6 @@ textarea {
   }
 }
 @media (min-width: 1200px) {
-  .fs-1 {
-    font-size: 2.5rem !important;
-  }
-  .fs-2 {
-    font-size: 2rem !important;
-  }
   .fs-3 {
     font-size: 1.75rem !important;
   }
@@ -948,6 +968,11 @@ video {
   opacity: 1;
 }
 
+.icon {
+  width: 35px;
+  height: 35px;
+}
+
 #register, #login {
   width: 100vw;
   height: 100vh;
@@ -977,10 +1002,6 @@ video {
 #register .form .input::placeholder, #login .form .input::placeholder {
   color: rgba(255, 255, 255, 0.6);
 }
-#register .form .icon, #login .form .icon {
-  width: 35px;
-  height: 35px;
-}
 #register .form .upload-image-label, #login .form .upload-image-label {
   cursor: pointer;
 }
@@ -998,10 +1019,12 @@ video {
   height: 40px;
   object-fit: cover;
 }
-.homepage-logged-in .navbar-icon, .homepage-logged-in .navbar-icon-noti {
+.homepage-logged-in .navbar-icon, .homepage-logged-in .navbar-icon-noti, .homepage-logged-in .chat-navbar-icon {
   cursor: pointer;
   width: 20px;
   height: 20px;
+}
+.homepage-logged-in .navbar-icon, .homepage-logged-in .navbar-icon-noti {
   margin-right: 8px;
 }
 .homepage-logged-in .navbar-icon {
@@ -1055,8 +1078,59 @@ video {
 .home-content-logged-in {
   width: 100%;
   min-height: 100vh;
-  background-color: rgba(30, 47, 151, 0.8);
-  color: #fff;
+  color: rgba(255, 255, 255, 0.8);
+}
+.home-content-logged-in .chat-icon {
+  width: 20px;
+  height: 20px;
+}
+.home-content-logged-in .messaging-window {
+  z-index: 999;
+}
+.home-content-logged-in .messaging-window .chatbox-navbar {
+  width: 100%;
+}
+.home-content-logged-in .messaging-window .messages-container {
+  background-color: #E0E0E0;
+  overflow-y: auto;
+}
+.home-content-logged-in .messaging-window .messages-container .sent-message p {
+  border-radius: 10px 10px 0 10px;
+}
+.home-content-logged-in .messaging-window .messages-container .recieved-message p {
+  border-radius: 10px 10px 10px 0;
+}
+.home-content-logged-in .chat-box-input {
+  resize: none;
+  width: 100%;
+  height: 35px;
+  outline: none;
+  border: none;
+  font-size: 16px;
+  overflow: hidden;
+}
+.home-content-logged-in .loggedin-friends {
+  z-index: 900;
+}
+.home-content-logged-in .loggedin-friends .onlineCircle {
+  width: 8px;
+  height: 8px;
+  border-radius: 50%;
+  background-color: #FF4081;
+  position: relative;
+  left: -8px;
+  top: 10px;
+}
+.home-content-logged-in .loggedin-friends .friends-container {
+  border-top: 1px solid rgba(255, 255, 255, 0.8);
+  overflow-y: auto;
+  max-height: 100vh;
+}
+.home-content-logged-in .loggedin-friends .friends-container .friend-info-container {
+  cursor: pointer;
+}
+.home-content-logged-in .loggedin-friends .friends-container .friend-info-container:hover {
+  background-color: #1E2F97;
 }
 
 .roller-wrapper {
@@ -1168,5 +1242,41 @@ video {
   }
   100% {
     transform: rotate(360deg);
+  }
+}
+#wave {
+  display: flex;
+  align-items: center;
+  position: relative;
+  text-align: center;
+  width: 40px;
+  height: 20px;
+  margin-left: 10px;
+}
+
+#wave .dot {
+  display: inline-block;
+  width: 6px;
+  height: 6px;
+  border-radius: 50%;
+  margin-right: 3px;
+  background: #333;
+  animation: wave 1.3s linear infinite;
+}
+
+#wave .dot:nth-child(2) {
+  animation-delay: -1.1s;
+}
+
+#wave .dot:nth-child(3) {
+  animation-delay: -0.9s;
+}
+
+@keyframes wave {
+  0%, 60%, 100% {
+    transform: initial;
+  }
+  30% {
+    transform: translateY(-10px);
   }
 }
