--- a/src/styles/sass/main.scss
+++ b/src/styles/sass/main.scss
@@ -75,6 +75,10 @@ html {
   padding: 0;
 }
 
+body {
+  background-color: rgba($background, 0.8);
+}
+
 video {
   filter: brightness(40%);
   width: 100%;
@@ -201,6 +205,10 @@ video {
   }
 }
 
+.icon {
+  width: 35px;
+  height: 35px;
+}
 
 #register, #login {
   width: 100vw;
@@ -235,11 +243,6 @@ video {
       }
     }
 
-    .icon {
-      width: 35px;
-      height: 35px;
-    }
-
     .upload-image-label {
       cursor: pointer;
     }
@@ -266,10 +269,13 @@ video {
     margin-top: 1.3rem;
   }
   
-  .navbar-icon, .navbar-icon-noti {
+  .navbar-icon, .navbar-icon-noti, .chat-navbar-icon {
     cursor: pointer;
     width: 20px;
     height: 20px;
+  }
+
+  .navbar-icon, .navbar-icon-noti {
     margin-right: 8px;
   }
   
@@ -338,8 +344,77 @@ video {
   width: 100%;
   min-height: 100vh;
 
-  background-color: rgba($background, 0.8);
-  color: $secondary;
+  color: rgba($secondary, 0.8);
+
+  .chat-icon {
+    width: 20px;
+    height: 20px;
+  }
+
+  .messaging-window {
+    z-index: 999;
+
+    .chatbox-navbar {
+      width: 100%;
+    }
+  
+    .messages-container {
+      background-color: #E0E0E0;
+      overflow-y: auto;
+
+      .sent-message {
+
+        p {
+          border-radius: 10px 10px 0 10px;
+        }
+      }
+
+      .recieved-message {
+        
+        p {
+          border-radius: 10px 10px 10px 0;
+        }
+      }
+    }
+  }
+  
+  .chat-box-input {
+    resize: none;
+    width: 100%;
+    height: 35px;
+    outline: none;
+    border: none;
+    font-size: 16px;
+    overflow: hidden;
+  }
+
+  .loggedin-friends {
+    z-index: 900;
+
+    .onlineCircle {
+      width: 8px;
+      height: 8px;
+      border-radius: 50%;
+      background-color: #FF4081;
+      position: relative;
+      left: -8px;
+      top: 10px;
+    }
+
+    .friends-container {
+      border-top: 1px solid rgba($secondary, 0.8);
+      overflow-y: auto;
+      max-height: 100vh;
+      
+      .friend-info-container {
+        cursor: pointer;
+        
+        &:hover {
+          background-color: $background;
+        }
+      }
+    }
+  }
 }
 
 
@@ -472,5 +547,41 @@ video {
   }
   100% {
     transform: rotate(360deg);
+  }
+}
+
+
+// 3 dots wave styles ....................
+#wave {
+  display: flex;
+  align-items: center;
+  position: relative;
+  text-align: center;
+  width: 40px;
+  height: 20px;
+  margin-left: 10px;
+}
+#wave .dot {
+  display: inline-block;
+  width: 6px;
+  height: 6px;
+  border-radius: 50%;
+  margin-right: 3px;
+  background: #333;
+  animation: wave 1.3s linear infinite;
+}
+#wave .dot:nth-child(2) {
+  animation-delay: -1.1s;
+}
+#wave .dot:nth-child(3) {
+  animation-delay: -0.9s;
+}
+
+@keyframes wave {
+  0%, 60%, 100% {
+    transform: initial;
+  }
+  30% {
+    transform: translateY(-10px);
   }
 }
