--- a/src/styles/sass/main.scss
+++ b/src/styles/sass/main.scss
@@ -362,6 +362,16 @@ video {
 
     .chatbox-navbar {
       width: 100%;
+
+      .onlineCircle {
+        width: 8px;
+        height: 8px;
+        border-radius: 50%;
+        background-color: #FF4081;
+        position: relative;
+        left: -15px;
+        top: 10px;
+      }
     }
   
     .messages-container {
