--- a/src/styles/sass/main.scss
+++ b/src/styles/sass/main.scss
@@ -214,12 +214,42 @@ video {
   }
 }
 
-#register, #login {
+#register, #login, #verify-email {
   width: 100vw;
   height: 100vh;
+  position: relative;
+  overflow: hidden;
 
+  .verify-email-content {
+    z-index: 3;
+  }
+
+  .bg-image, .bg-color {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+  }
+
+  .bg-image {
+    background-image: url("../../assets/images/LoginRegister/Login-Register-Image.jpeg");
+    background-position: center;
+    background-size: cover;
+    background-repeat: no-repeat;
+    filter: brightness(40%);
+    z-index: 1; /* Ensure the pseudo-element is behind the content */
+  }
+
+  .bg-color {
+    background: rgb(107,30,123);
+    background: linear-gradient(0deg, rgba(107,30,123,0.3841911764705882) 0%, rgba(255,64,129,0.17690826330532217) 100%);
+    z-index: 2;
+  }
+  
   .sign-form {
-    background: rgba($secondary, 0.8);
+    background: $secondary;
+    z-index: 3;
   }
 
   .error {
@@ -232,7 +262,7 @@ video {
     max-width: 540px;
 
     .input {
-      background-color: rgba($primary, 0.3);
+      background-color: #666;
       color: $secondary;
       border: none;
       outline: none;
@@ -249,6 +279,21 @@ video {
 
     .upload-image-label {
       cursor: pointer;
+      transition: $base-transition-duration;
+
+      svg {
+        width: 35px;
+        height: 35px;
+        fill: $primary;
+      }
+
+      &:hover {
+        color: $tertiary-second;
+
+        svg {
+          fill: $tertiary-second;
+        }
+      }
     }
 
     .sign-button {
