--- a/src/styles/sass-compiled-css/sass/main.css
+++ b/src/styles/sass-compiled-css/sass/main.css
@@ -422,6 +422,13 @@ textarea {
 .g-3 {
   --bs-gutter-y: 1rem;
 }
+
+@media (min-width: 576px) {
+  .col-sm-6 {
+    flex: 0 0 auto;
+    width: 50%;
+  }
+}
 @media (min-width: 768px) {
   .col-md-6 {
     flex: 0 0 auto;
@@ -545,8 +552,16 @@ textarea {
   }
 }
 
+.object-fit-contain {
+  object-fit: contain !important;
+}
+
 .object-fit-cover {
   object-fit: cover !important;
+}
+
+.overflow-hidden {
+  overflow: hidden !important;
 }
 
 .d-flex {
@@ -863,6 +878,11 @@ textarea {
   background-color: rgba(var(--bs-secondary-rgb), var(--bs-bg-opacity)) !important;
 }
 
+.bg-transparent {
+  --bs-bg-opacity: 1;
+  background-color: transparent !important;
+}
+
 .rounded {
   border-radius: var(--bs-border-radius) !important;
 }
@@ -936,6 +956,10 @@ textarea {
 }
 * {
   font-family: "Inter", sans-serif;
+}
+
+.cursor-pointer {
+  cursor: pointer !important;
 }
 
 video {
@@ -1141,6 +1165,31 @@ video {
   cursor: pointer;
   width: 25px;
   height: 25px;
+  position: relative;
+  background-color: #404040;
+  border-radius: 5px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.homepage-logged-in .image-navbar-icon:hover .custom-tooltip, .profile-page .image-navbar-icon:hover .custom-tooltip {
+  opacity: 1;
+  z-index: 900;
+}
+.homepage-logged-in .image-navbar-icon .custom-tooltip, .profile-page .image-navbar-icon .custom-tooltip {
+  position: absolute;
+  top: -28px;
+  right: 0;
+  background: #E0E0E0;
+  padding: 1.5px 3px;
+  border-radius: 5px;
+  font-size: 14px;
+  z-index: -100;
+  pointer-events: none;
+  opacity: 0;
+  transition: 0.1s;
+  text-wrap: nowrap;
+  user-select: none;
 }
 .homepage-logged-in .image-navbar-icon img, .profile-page .image-navbar-icon img {
   user-select: none;
@@ -1312,6 +1361,10 @@ video {
   width: 100vw;
   min-height: 100vh;
 }
+.user-profile .photo-collection-image {
+  max-height: 250px !important;
+  user-select: none;
+}
 .user-profile .user-card .user-card-border {
   border: 1px solid #333;
 }
@@ -1319,10 +1372,29 @@ video {
   width: 90px;
   height: 90px;
 }
+ .user-profile .cover-user-image {
+  width: 100%;
+  max-height: 350px;
+  position: relative;
+  z-index: 10;
+  overflow: hidden;
+}
+ .user-profile .cover-user-image .image-container {
+  max-width: 700px;
+  height: auto;
+}
+ .user-profile .cover-user-image img {
+  width: 100%;
+  object-fit: contain;
+  user-select: none;
+}
+.user-profile .cover-user-image {
+  background-color: #333;
+}
 .user-profile .profile-image-container {
   z-index: 5;
 }
-.user-profile .profile-image-container img {
+.user-profile .profile-image-container div img, .user-profile .profile-image-container div label img {
   border: 3px solid #6082B6;
   cursor: pointer;
   z-index: 15;
